# yew

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  index.html  main.css
.github/workflows/: pr_check.yml
src/: lib.rs  main.rs
src/component/: main_header.rs  main_navigation.rs  mod.rs
src/resource/: main.css
terraform/: .env.sample  bastion.tf  data.tf  database.tf  main.tf  network.tf  test.tfvars  variables.tf  web-servers.tf
